[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/UI/Slimes/SlimeScreen.gd" type="Script" id=1]
[ext_resource path="res://Prefab/UI/Slimes/SlimeInfo.tscn" type="PackedScene" id=2]
[ext_resource path="res://Prefab/UI/Slimes/SlimeAssignPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Font/UIFontTitle.tres" type="Theme" id=4]
[ext_resource path="res://Scripts/Upgrades/Upgrade.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Upgrades/Upgradeable.gd" type="Script" id=6]
[ext_resource path="res://Font/UIFontSubTitle.tres" type="Theme" id=7]

[sub_resource type="Animation" id=1]
resource_name = "AnimateUnusedSlimes"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/UnusedSlimesLabel:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -5.0, 0.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/UnusedSlimesLabel:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Slime" type="Container"]
margin_left = 250.0
margin_right = 744.0
margin_bottom = 600.0
rect_min_size = Vector2( 480, 0 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.556863 )
margin_left = 3.0
margin_right = 494.0
margin_bottom = 600.0
rect_min_size = Vector2( 494, 600 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 7.0
margin_right = 487.0
margin_bottom = 593.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 480.0
margin_bottom = 17.0
theme = ExtResource( 4 )
text = "Slime"
align = 1

[node name="UnusedSlimesLabel" type="Label" parent="VBoxContainer"]
margin_top = 21.0
margin_right = 480.0
margin_bottom = 28.0
theme = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0 )
text = "0 unused slimes"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 480.0
margin_bottom = 532.0
rect_min_size = Vector2( 480, 500 )

[node name="Slimes" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 460.0
margin_bottom = 80.0
rect_min_size = Vector2( 460, 0 )

[node name="SlimeInfo" parent="VBoxContainer/ScrollContainer/Slimes" instance=ExtResource( 2 )]
margin_right = 460.0

[node name="JobAssignPanel" parent="." instance=ExtResource( 3 )]
visible = false
margin_right = 510.0

[node name="Upgradeable" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Lv1" type="Node2D" parent="Upgradeable"]
script = ExtResource( 5 )
UpgradeTitle = "Slime Clicker I"
UpgradeDescription = "Click slimes to do job faster"
RequirementType = [ 0 ]
RequirementAmount = [ 5 ]
TechCommand1 = 4

[node name="Lv2" type="Node2D" parent="Upgradeable"]
position = Vector2( 0, 1 )
script = ExtResource( 5 )
UpgradeTitle = "Slime Clicker II"
UpgradeDescription = "Click slimes to do job faster"
RequirementType = [ 0, 3 ]
RequirementAmount = [ 8, 8 ]
TechCommand1 = 4

[node name="Lv3" type="Node2D" parent="Upgradeable"]
script = ExtResource( 5 )
UpgradeTitle = "Slime Clicker III"
UpgradeDescription = "Click slimes to do job faster"
RequirementType = [ 0, 3 ]
RequirementAmount = [ 12, 12 ]
TechCommand1 = 4

[node name="Lv4" type="Node2D" parent="Upgradeable"]
script = ExtResource( 5 )
UpgradeTitle = "Slime Clicker IV"
UpgradeDescription = "Click slimes to do job faster"
RequirementType = [ 0, 3 ]
RequirementAmount = [ 16, 16 ]
TechCommand1 = 4

[node name="Lv5" type="Node2D" parent="Upgradeable"]
script = ExtResource( 5 )
UpgradeTitle = "Slime Clicker V"
UpgradeDescription = "Click slimes to do job faster"
RequirementType = [ 0, 3 ]
RequirementAmount = [ 24, 24 ]
TechCommand1 = 4

[node name="Help Slime" type="Node2D" parent="Upgradeable"]
script = ExtResource( 5 )
UpgradeTitle = "Help Clicky Slime"
UpgradeDescription = "Help Clicky Slime!"
RequirementType = [ 5 ]
RequirementAmount = [ 18 ]
TechCommand1 = 3
TechCommand2 = "Clicky"

[node name="Lv6" type="Node2D" parent="Upgradeable"]
script = ExtResource( 5 )
UpgradeTitle = "Slime Clicker VI"
UpgradeDescription = "Click slimes to do job faster"
RequirementType = [ 0, 3 ]
RequirementAmount = [ 32, 32 ]
TechCommand1 = 4

[node name="Lv7" type="Node2D" parent="Upgradeable"]
script = ExtResource( 5 )
UpgradeTitle = "Slime Clicker VII"
UpgradeDescription = "Click slimes to do job faster"
RequirementType = [ 0, 3 ]
RequirementAmount = [ 56, 56 ]
TechCommand1 = 4

[node name="Lv8" type="Node2D" parent="Upgradeable"]
script = ExtResource( 5 )
UpgradeTitle = "Slime Clicker VIII"
UpgradeDescription = "Click slimes to do job faster"
RequirementType = [ 0, 3 ]
RequirementAmount = [ 72, 72 ]
TechCommand1 = 4

[node name="Lv9" type="Node2D" parent="Upgradeable"]
script = ExtResource( 5 )
UpgradeTitle = "Slime Clicker IX"
UpgradeDescription = "Click slimes to do job faster"
RequirementType = [ 0, 3 ]
RequirementAmount = [ 96, 96 ]
TechCommand1 = 4

[node name="Lv10" type="Node2D" parent="Upgradeable"]
script = ExtResource( 5 )
UpgradeTitle = "Slime Clicker X"
UpgradeDescription = "Click slimes to do job faster"
RequirementType = [ 0, 3 ]
RequirementAmount = [ 100, 100 ]
TechCommand1 = 4

[node name="Lv11" type="Node2D" parent="Upgradeable"]
script = ExtResource( 5 )
UpgradeTitle = "Slime Clicker XI"
UpgradeDescription = "Click slimes to do job faster"
RequirementType = [ 0, 3, 2 ]
RequirementAmount = [ 100, 100, 20 ]
TechCommand1 = 4

[node name="Lv12" type="Node2D" parent="Upgradeable"]
script = ExtResource( 5 )
UpgradeTitle = "Slime Clicker XII"
UpgradeDescription = "Click slimes to do job faster"
RequirementType = [ 0, 3, 4 ]
RequirementAmount = [ 100, 100, 50 ]
TechCommand1 = 4

[node name="Lv13" type="Node2D" parent="Upgradeable"]
script = ExtResource( 5 )
UpgradeTitle = "Slime Clicker XIII"
UpgradeDescription = "Click slimes to do job faster"
RequirementType = [ 0, 3, 5 ]
RequirementAmount = [ 100, 100, 80 ]
TechCommand1 = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AnimateUnusedSlimes = SubResource( 1 )
anims/RESET = SubResource( 2 )
